# bsim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  BUSINESS_CASE.md  INCONSISTENCIES.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: PUBLIC_INTERNAL_BOUNDARY.md  README.md  biomodule.md  bioworld.md  book.md  brain_pipeline.md  config.md  neuro.md  overview.md  plugin-development.md  quickstart.md  releasing.md  wiring.md
docs/plans/: plugin-architecture.md
examples/: README.md  basic_usage.py  ecology_simui_demo.py  multi_module_ui_demo.py  neuro_microcircuit_demo.py  neuro_simui_demo.py  neuro_single_neuron_demo.py  ui_demo.py  visuals_demo.py  wiring_builder_demo.py  world_simulation.py
examples/adapters/: test_tellurium_adapter.py
examples/configs/: README.md  ecology_predator_prey.yaml  neuro_microcircuit.toml  neuro_microcircuit.yaml  neuro_single_neuron.toml  neuro_single_neuron.yaml
examples/pack-template/: README.md
examples/pack-template/src/my_pack/: modules.py
product-docs/: PRD.md  README.md  ROADMAP.md  STRATEGY.md  TEMPLATE_TASK.md
product-docs/contracts/: bioworld-orchestrator-migration-plan.md  plugin-contract.md  simui-api.md  solver-contract.md  solver-kernel-vs-adapters.md  wiring-spec.md
product-docs/epics/: 01-foundation.md  02-core-runtime.md  03-wiring-config.md  04-simui.md  05-cli.md  06-packaging-release.md  08-plugin-sdk.md  09-standards-interop.md  10-web-platform.md  11-observability-performance.md  12-docs-examples.md  13-repo-hygiene.md
product-docs/quality/: definition-of-done.md  security-and-safety.md  testing-strategy.md
scripts/: build_simui_frontend.sh  check_public_boundary.sh
src/b_simulant/: __init__.py
src/biosim/: __about__.py  visuals.py  world.py
src/biosim/simui/: interface.py  registry.py
src/biosim/simui/_frontend/src/: App.tsx
src/biosim/simui/_frontend/src/components/: Footer.tsx
src/biosim/simui/_frontend/src/components/editor/: ConfigEditor.tsx  ModuleNode.tsx
src/biosim/simui/_frontend/src/renderers/: Timeseries.tsx
src/biosim/simui/_frontend/src/styles/: globals.css
src/biosim/simui/_frontend/src/types/: api.ts
src/biosim/simui/static/: app.css  app.js
src/bsim/: __about__.py  __init__.py  __main__.py  modules.py  signals.py  solver.py  visuals.py  wiring.py  world.py
src/bsim/adapters/: broker.py
src/bsim/packs/: __init__.py
src/bsim/packs/ecology/: environment.py  interactions.py  monitors.py  populations.py
src/bsim/packs/neuro/: __init__.py  inputs.py  monitors.py  populations.py  synapses.py
src/bsim/simui/: __init__.py  build.py  editor_api.py  graph.py  interface.py  registry.py  runner.py
src/bsim/simui/_frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/bsim/simui/_frontend/src/: App.tsx  main.tsx
src/bsim/simui/_frontend/src/app/: providers.tsx  ui.tsx
src/bsim/simui/_frontend/src/components/: Footer.tsx  MainContent.tsx  ModuleVisuals.tsx  Sidebar.tsx
src/bsim/simui/_frontend/src/lib/: api.ts  config.ts  time.ts
src/bsim/simui/_frontend/src/renderers/: Bar.tsx  Graph.tsx  ImageView.tsx  Table.tsx  Timeseries.tsx
src/bsim/simui/_frontend/src/styles/: globals.css
src/bsim/simui/_frontend/src/types/: api.ts
src/bsim/simui/static/: app.css  app.js
tasks/: README.md  ROADMAP.md  TEMPLATE_TASK.md
tasks/contracts/: simui-api.md  solver-contract.md  visualspec.md  wiring-spec.md
tasks/epics/: 01-foundation.md  02-core-runtime.md  03-wiring-config.md  04-simui.md  05-cli.md  07-domain-modules.md  08-plugin-sdk.md  09-standards-interop.md  10-web-platform.md  11-observability-performance.md  12-docs-examples.md  13-repo-hygiene.md
tasks/quality/: definition-of-done.md  security-and-safety.md  testing-strategy.md
tests/: conftest.py  test_api.py  test_biomodules.py  test_biosignals.py  test_bioworld_flow.py  test_cli.py  test_errors.py  test_listeners.py  test_neuro_pack.py  test_optional_deps.py  test_ports_validation.py  test_simui_build.py  test_simui_editor_api.py  test_simui_graph.py  test_simui_interface.py  test_simui_registry.py  test_simui_runner.py  test_simui_spec.py  test_visuals.py  test_wiring_builder.py  test_wiring_loader.py  test_world_load_wiring.py  test_world_load_wiring_yaml.py
